--- a/home.css
+++ b/home.css
@@ -47,11 +47,12 @@ body {
 	margin-top: 85px;
 	margin-left: 300px;
 	background-color: black;
-	padding: 0;
+	padding: 25px;
 	height: 30px;
 	position: absolute;
 	width: 100%;
 	text-align: center;
+	overflow: hidden;
 }
 
 #navbar {
@@ -62,6 +63,11 @@ body {
 #navlist {
 	padding: 0px;
 	text-align: center;
+}
+
+#pageContent {
+	padding: 25px;
+	margin-top: 50px;
 }
 
 .navitems {
@@ -149,15 +155,23 @@ li.active a {
 
 #leftContent {
 	background-color: #e2e2e2;
-	height: 950px;
-	margin-left: 15px;
+	height: 100%;
 	border-radius: 6px;
+	padding: 10px;
+	margin-right: 5px;
+	
+}
+
+#mapContent {
+	background-color: #e2e2e2;
+	height: 950px;
+	border-radius: 6px;
+	margin-right: 5px;
 }
 
 .beerList {
-	width: 75%;
-	margin: auto;
-	padding-top: 20px;
+	width: 100%;
+	padding: 40px;
 	text-align: justify;
 	text-decoration: none;
   	font-family: Helvetica, Verdana, sans-serif;
@@ -170,30 +184,33 @@ li.active a {
 
 #rightContent {
 	background-color: #e2e2e2;
-	height: 950px;
-	margin-left: 50px;
-	padding-left: 35px;
-	padding-right: 20px;
+	height: 100%;
 	border-radius: 6px;
+	margin-left: 5px;
+	padding: 15px;
+	text-align: center;
 }
 
 #photoContent {
 	background-color: #e2e2e2;
 	height: 1200px;
-	margin-left: 15px;
 	border-radius: 6px;
 }
 
 #sidePhotoContainer {
-	padding-top: 5px;
+	width: 100%;
 	text-align: center;
 }
 
-.aboutPhotoContainer {
-	margin: auto;
+#sideImg {
 	width: 100%;
-	height: 300px;
-	padding-top: 20px;
+	align-self: auto;
+}
+
+.aboutPhotoContainer {
+	margin: 15px;
+	width: 100%;
+	padding: 20px;
 	text-align: center;
 	position: relative;
 }
